--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "source $HOME/.nvm/nvm.sh; nvm use;vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
