--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "source $HOME/.nvm/nvm.sh; nvm use;vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
-    "build-only": "vite build",
+    "build-only": "vite build --base=/kiumilin/",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
