--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": [
+    "vite.plugin.*",
     "vite.config.*",
     "vitest.config.*",
     "cypress.config.*",
